--- a/assets/main.css
+++ b/assets/main.css
@@ -1,10 +1,16 @@
 html, body { width: 100%; height: 100%; margin: 0; padding: 0; overflow: hidden; font-family: sans-serif; font-size: 12pt; }
-.editor { width: 50%; height: calc(100% - 45px); padding-top: 5px; border: 0; float: left; background: #1e1e1e; }
+
+.editor { width: 50%; height: calc(100% - 45px); border-top: 5px solid #1e1e1e; float: left; background: #1e1e1e; }
+#assembly .monaco-editor-background { background: #111; }
+#assembly { border-color: #111; }
+
 button { position: absolute; z-index: 4294967295; width: 120px; padding: 5px 10px; border-radius: 5px; cursor: pointer; outline: none; }
 button.compile { left: 50%; margin-left: -150px; bottom: 15px; }
 button.download { left: 100%; margin-left: -150px; bottom: 15px; }
+
 #header { height: 40px; box-sizing: border-box; padding: 0 12px; line-height: 40px; background: #0074c1; color: #fff; }
 #header a { color: #ccc; }
 #header .r { float: right; }
 #header a:hover { color: #fff; }
+
 #loading-icon { position: absolute; top: 50%; left: 50%; margin-top: -32px; margin-left: -32px; z-index: 4294967295; }
