--- a/assets/main.css
+++ b/assets/main.css
@@ -10,8 +10,8 @@ button.compile { left: 50%; margin-left: -150px; bottom: 15px; }
 button.download { left: 100%; margin-left: -150px; bottom: 15px; }
 
 #header { height: 40px; box-sizing: border-box; padding: 0 12px; line-height: 40px; background: #0074c1; color: #fff; }
-#header a { color: #ccc; }
+#header a { color: #fff; }
+#header a:hover { color: #ddd; }
 #header .r { float: right; }
-#header a:hover { color: #fff; }
 
 #loading-icon { position: absolute; top: 50%; left: 50%; margin-top: -32px; margin-left: -32px; z-index: 4294967295; }
